[package]
name = "randlib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate random values from pointer addresses and time."
repository = "https://github.com/Ernest1338/randlib"
readme = "README.md"
keywords = ["random", "rand"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "randlib"
path = "src/lib.rs"

[dependencies]
