[package]
name = "randlib"
version = "0.1.8"
edition = "2021"
license = "MIT"
authors = ["Ernest1338"]
description = "Dependency-less random value generator using pointer addresses and time"
repository = "https://github.com/Ernest1338/randlib"
homepage = "https://github.com/Ernest1338/randlib"
documentation = "https://docs.rs/randlib"
readme = "README.md"
keywords = ["random", "rand"]

[dependencies]
